# HuaweiCodeCraft

SDK-gcc/future_net/: CMakeLists.txt  future_net.cpp  route.cpp  route.h
SDK-gcc/future_net/header/: solve.h
runcase/: run0  run1  run2  run3  run4  run9  runx
test-case/case0/: .demand.csv.swp  .topo.csv.swp  demand.csv  sample_result.csv  topo.csv
testcase2/case0/: topo.csv
testcase2/case2/: sample_result.csv
testcase2/case3/: sample_result.csv  topo.csv
testcase2/case4/: demand.csv  sample_result.csv  topo.csv
testcase2/my/: sample_result.csv
testcase2/pcase2/: demand.csv
testcase2/pcase2/高级测试用例/: demand.csv  result.csv  topo.csv
